# 4

./: CMakeLists.txt  README.md  conanfile.txt  config.json
.github/workflows/: ci.yml
inc/: common.hpp  config.hpp  scanner.hpp
src/: config.cpp  main.cpp  scanner.cpp
